fix coming soon message on mobile screen

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -35,11 +35,14 @@
 
   &__soon {
     position: absolute;
-    font-size: 0.625rem;
+    font-size: 0.5rem;
     top: 1.5rem;
     left: 0.5rem;
     color: $dark-red;
     text-transform: uppercase;
+    @include tablet {
+      font-size: 0.625rem;
+    }
   }
 
   .active {
